--- a/ag-dam.html
+++ b/ag-dam.html
@@ -8,24 +8,69 @@
     <link rel="stylesheet" href="css/portal.css">
     <link rel="stylesheet" href="css/dam.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>2º Via DAM</title>
 </head>
 <body>
     <div class="curtain"></div>
-    <header class="py-2"> 
+    <header class="py-3"> 
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
-                <button class="a11y-button">
-                    <i class="bi bi-zoom-out"></i>
-                </button>
-                <button id="contraste-btn" class="a11y-button">
+                <button class="a11y-button" id="contraste-btn">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button">
+                <button class="a11y-button" id="btnDiminuir">
+                    <i class="bi bi-zoom-out"></i>
+                </button>
+                <button class="a11y-button" id="btnAumentar">
                     <i class="bi bi-zoom-in"></i>
                 </button>
+                <button class="a11y-button" id="btnReset">
+                    <i class="bi bi-fonts"></i>
+                </button>
             </div>
+            <div class="a11y-modal">
+                <button class="modal-btn" data-bs-toggle="modal" data-bs-target=".modal">
+                    Clique aqui!
+                </button>
+            </div>
+            <div class="modal fade" tabindex="-1">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Para que servem os botões?</h4>
+                            <button class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="pt-2">
+                                <button class="a11y-button">
+                                    <i class="bi bi-circle-half"></i>
+                                </button>
+                                <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
+                            </div>
+                            <div class="pt-2">
+                                <button class="a11y-button">
+                                    <i class="bi bi-zoom-out"></i>
+                                </button>
+                                <span class="ms-1">Este diminui o tamanho da fonte.</span>
+                            </div>
+                            <div class="pt-2">
+                                <button class="a11y-button">
+                                    <i class="bi bi-zoom-in"></i>
+                                </button>
+                                <span class="ms-1">Este aumenta o tamanho da fonte.</span>
+                            </div>
+                            <div class="pt-2">
+                                <button class="a11y-button">
+                                    <i class="bi bi-fonts"></i>
+                                </button>
+                                <span class="ms-1">Este retorna o tamanho para a fonte padrão.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </div>
     </header>
     <main class="container">
@@ -36,9 +81,9 @@
             <div class="column align-items-center gap-2">
                 <div class="user-text">
                     <p class="text-end">Olá, 
-                        <span class="user-name">user</span>
+                        <span class="user-name">José</span>
                     </p>
-                    <p class="text-end msg">lorem ipsum</p>
+                    <p class="text-end msg">Seja bem-vindo!</p>
                 </div>
                 <button class="user-btn" 
                  data-bs-toggle="popover"
@@ -47,8 +92,12 @@
                  data-bs-custom-class="user-popover"
                  data-bs-content="
                  <ul class='popover-list'>
-                    <li>Solicitar acesso</li>
-                    <li>Redefinir senha</li>
+                    <li>
+                        <a href='ag-senha.html' 
+                         class='popover-list--a'>
+                            Redefinir senha
+                        </a>
+                    </li>
                     <li>
                         <a href='ag-login.html' 
                          class='popover-list--a'>
@@ -237,43 +286,8 @@
         </div>
         <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
-    <!-- MODAL -->
-    <div class="a11y-modal">
-        <button class="a11y-button" data-bs-toggle="modal" data-bs-target=".modal">
-            <i class="bi bi-universal-access-circle text-white"></i>
-        </button>
-    </div>
-    <div class="modal fade" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Para que servem esses botões?</h4>
-                    <button class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="pt-2">
-                        <button class="a11y-button">
-                            <i class="bi bi-zoom-out"></i>
-                        </button>
-                        <span class="ms-1">Este diminui o tamanho da fonte.</span>
-                    </div>
-                    <div class="pt-2">
-                        <button class="a11y-button">
-                            <i class="bi bi-zoom-in"></i>
-                        </button>
-                        <span class="ms-1">Este aumenta o tamanho da fonte</span>
-                    </div>
-                    <div class="pt-2">
-                        <button class="a11y-button">
-                            <i class="bi bi-circle-half"></i>
-                        </button>
-                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> 
     <script src="app.js"></script>
+    <script src="/js/acessibilidade.js"></script>
     <script src="js/dam.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
