--- a/ag-login.html
+++ b/ag-login.html
@@ -6,13 +6,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>Portal Ágape Sistemas</title>
 </head>
 <body>
     <div class="wrapper column">
         <section class="container section__head column">
-            <div>
+            <div class="column ag-logo--container">
                 <img src="images/logo/Union.png" alt="agape" class="ag-logo">
+                <div class="btn-group">
+                    <button class="a11y-button" id="contraste-btn">
+                        <i class="bi bi-circle-half"></i>
+                    </button>
+                    <button class="a11y-button" id="btnDiminuir">
+                        <i class="bi bi-zoom-out"></i>
+                    </button>
+                    <button class="a11y-button" id="btnAumentar">
+                        <i class="bi bi-zoom-in"></i>
+                    </button>
+                    <button class="a11y-button" id="btnReset">
+                        <i class="bi bi-fonts"></i>
+                    </button>
+                </div>
             </div>
             <div class="welcome-box">
                 <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
@@ -33,7 +48,7 @@
                 <div class="forms-main">
                     <form action="">
                         <label for="input-cpf">CPF/CNPJ:</label>
-                        <input type="text" id="input-cpf" placeholder="Digite aqui seu CPF">
+                        <input type="text" id="input-cpf" placeholder="Digite aqui seu CPF/CNPJ">
                     </form>
                     <form action="">
                         <label for="input-senha">Senha:</label>
@@ -62,18 +77,8 @@
             </div>
         </section>
     </div>
-    <div class="btn-group">
-        <button class="a11y-button">
-            <i class="bi bi-zoom-out"></i>
-        </button>
-        <button class="a11y-button" id="contraste-btn">
-            <i class="bi bi-circle-half"></i>
-        </button>
-        <button class="a11y-button">
-            <i class="bi bi-zoom-in"></i>
-        </button>
-    </div>
     <script src="app.js"></script>
     <script src="js/mask.js"></script>
+    <script src="/js/acessibilidade.js"></script>
 </body>
 </html>
