--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="content">
         <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
-        <h1>Tenha a gestão publica na sua mão!</h1>
-        <p>Nosso portal foi criado e pensado exclusivamente para a gestão publica de sua necessidade.</p>
+        <h1>Tenha a gestão pública na sua mão!</h1>
+        <p>Nosso portal foi criado e pensado exclusivamente para facilitar e agilizar a gestão pública de sua necessidade.</p>
         <a href="ag-contribuinte.html">
             <span class="btn"> Começar
                 <i class="bi bi-arrow-up-right"></i>
