--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -58,7 +58,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="column pt-3">
+        <div class="column pt-2 pt-xxl-3">
             <div class="gov-logo--container">
                 <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
