--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Ágape Sistemas</title>
 </head>
 <body>
     <div class="content">
         <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
-        <h1>Tenha a gestão pública na sua mão!</h1>
-        <p>Nosso portal foi criado e pensado exclusivamente para facilitar e agilizar a gestão pública de sua necessidade.</p>
+        <h1>Tenha a gestão publica na sua mão!</h1>
+        <p>Nosso portal foi criado e pensado exclusivamente para a gestão publica de sua necessidade.</p>
         <a href="ag-contribuinte.html">
             <span class="btn"> Começar
                 <i class="bi bi-arrow-up-right"></i>
