--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/login.css">
-    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>Portal Ágape</title>
 </head>
 <body>
@@ -50,20 +49,16 @@
         </section>
     </div>
     <div class="btn-group">
+        <button class="a11y-button">
+            <i class="bi bi-zoom-out"></i>
+        </button>
         <button class="a11y-button" id="contraste-btn">
             <i class="bi bi-circle-half"></i>
         </button>
-        <button class="a11y-button" id="btnDiminuir">
-            <i class="bi bi-zoom-out"></i>
-        </button>
-        <button class="a11y-button" id="btnAumentar">
+        <button class="a11y-button">
             <i class="bi bi-zoom-in"></i>
-        </button>
-        <button class="a11y-button" id="btnReset">
-            <i class="bi bi-fonts"></i>
         </button>
     </div>
     <script src="app.js"></script>
-    <script src="/js/acessibilidade.js"></script>
 </body>
 </html>
