--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -7,77 +7,27 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/portal.css">
-    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>Portal do Contribuinte</title>
 </head>
 <body>
     <header class="py-3">
         <div class="container d-flex justify-content-between align-items-center">
             <img src="images/logo/Union.png" class="ag-logo" alt="agape">
-            <div class="a11y-modal">
-                <button class="modal-btn" data-bs-toggle="modal" data-bs-target=".modal">
-                    Clique aqui!
-                </button>
-            </div>
-            <div class="modal fade" tabindex="-1">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Para que servem os botões?</h4>
-                            <button class="btn-close" data-bs-dismiss="modal"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="pt-2">
-                                <button class="a11y-button">
-                                    <i class="bi bi-circle-half"></i>
-                                </button>
-                                <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
-                            </div>
-                            <div class="pt-2">
-                                <button class="a11y-button">
-                                    <i class="bi bi-zoom-out"></i>
-                                </button>
-                                <span class="ms-1">Este diminui o tamanho da fonte.</span>
-                            </div>
-                            <div class="pt-2">
-                                <button class="a11y-button">
-                                    <i class="bi bi-zoom-in"></i>
-                                </button>
-                                <span class="ms-1">Este aumenta o tamanho da fonte.</span>
-                            </div>
-                            <div class="pt-2">
-                                <button class="a11y-button">
-                                    <i class="bi bi-fonts"></i>
-                                </button>
-                                <span class="ms-1">Este retorna o tamanho para a fonte padrão.</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> 
-        </div>
-    </header>
-    <main class="container">
-        <div class="column pt-2 pt-xxl-3">
-            <div class="gov-logo--container">
-                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
-            </div>
             <div>
+                <button class="a11y-button">
+                    <i class="bi bi-zoom-out"></i>
+                </button>
                 <button class="a11y-button" id="contraste-btn">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button" id="btnDiminuir">
-                    <i class="bi bi-zoom-out"></i>
-                </button>
-                <button class="a11y-button" id="btnAumentar">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-in"></i>
-                </button>
-                <button class="a11y-button" id="btnReset">
-                    <i class="bi bi-fonts"></i>
                 </button>
             </div>
         </div>
-        <div class="d-md-flex flex-row-reverse justify-content-between py-md-3">
+    </header>
+    <main class="container">
+        <div class="d-md-flex flex-row-reverse justify-content-between align-items-center py-md-3">
             <div class="search-box">
                 <form action="">
                     <input type="text" id="input-busca" placeholder="Pesquisar">
@@ -96,8 +46,49 @@
         </div>
         <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
+    <!-- MODAL -->
+    <div class="a11y-modal">
+        <button class="a11y-button" data-bs-toggle="modal" data-bs-target=".modal">
+            <i class="bi bi-universal-access-circle text-white"></i>
+        </button>
+    </div>
+    <div class="modal fade" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Para que servem os botões?</h4>
+                    <button class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-zoom-out"></i>
+                        </button>
+                        <span class="ms-1">Este diminui o tamanho da fonte.</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-zoom-in"></i>
+                        </button>
+                        <span class="ms-1">Este aumenta o tamanho da fonte</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-circle-half"></i>
+                        </button>
+                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
+                    </div>
+                    <!-- <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-universal-access-circle text-white"></i>
+                        </button>
+                        <span class="ms-1">Selecione o tributo desejado clicando no nome.</span>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+    </div> 
     <script src="app.js"></script>
-    <script src="/js/acessibilidade.js"></script>
     <script src="js/portal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
