--- a/ag-senha.html
+++ b/ag-senha.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="css/login.css">
+    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>Recuperar a senha</title>
 </head>
 <body>
@@ -14,13 +15,13 @@
             <div>
                 <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             </div>
-            <p class="d-none">Bem vindo(a) ao portal do contribuinte</p>
+            <p class="d-none">Bem vindo(a) ao<br> portal do contribuinte</p>
         </section>
         <section class="container section__main">
             <div class="position">
                 <h2 class="forms-title">Esqueceu a senha?</h2>
                 <div class="forms-main">
-                    <p>Digite o seu telefone no campo abaixo e lhe enviaremos uma nova senha.</p>
+                    <p>Digite o seu telefone no campo abaixo e enviaremos uma nova senha.</p>
                     <form action="">
                         <input type="text" id="input-cpf" placeholder="Digite aqui seu telefone">
                     </form>
@@ -40,16 +41,20 @@
         </section>
     </div>
     <div class="btn-group">
-        <button class="a11y-button">
-            <i class="bi bi-zoom-out"></i>
-        </button>
         <button class="a11y-button" id="contraste-btn">
             <i class="bi bi-circle-half"></i>
         </button>
-        <button class="a11y-button">
+        <button class="a11y-button" id="btnDiminuir">
+            <i class="bi bi-zoom-out"></i>
+        </button>
+        <button class="a11y-button" id="btnAumentar">
             <i class="bi bi-zoom-in"></i>
+        </button>
+        <button class="a11y-button" id="btnReset">
+            <i class="bi bi-fonts"></i>
         </button>
     </div>
     <script src="app.js"></script>
+    <script src="/js/acessibilidade.js"></script>
 </body>
 </html>
